[gd_scene load_steps=18 format=3 uid="uid://dd4e3wv6xahty"]

[ext_resource type="Script" path="res://scenes/gameboard/scripts/logic.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ddnfpi8nnt6o0" path="res://scenes/gameboard/prefabs/card-space.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://de38q4xua11xu" path="res://scenes/gameboard/prefabs/healthbar.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://dhl21c73fohma" path="res://scenes/gameboard/prefabs/cardsLeft.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://dys067fcb2jup" path="res://scenes/gameboard/prefabs/blockOpponent.tscn" id="7_luclj"]
[ext_resource type="PackedScene" uid="uid://bvcn0w7wgi4kl" path="res://scenes/gameboard/prefabs/waitWhileFight.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://ccc2tywi8eumf" path="res://scenes/gameboard/prefabs/player-looses.tscn" id="8_vb3l3"]
[ext_resource type="PackedScene" uid="uid://c3s7600f7wysf" path="res://scenes/gameboard/prefabs/attackOpponent.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://vjthyer42ikq" path="res://scenes/gameboard/prefabs/player-wins.tscn" id="9_aphqi"]
[ext_resource type="Texture2D" uid="uid://bei880jwcycis" path="res://data/cards/images/placeholder.png" id="9_ycway"]
[ext_resource type="StyleBox" uid="uid://btkbuk73rd6y" path="res://shared/styles/buttons.tres" id="10_ao1xb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e8sp8"]
bg_color = Color(0.576471, 0, 0.117647, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu1b1"]
bg_color = Color(0.576471, 0, 0.117647, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aa5pe"]
bg_color = Color(0.576471, 0, 0.117647, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c82is"]
bg_color = Color(0.0862745, 0.27451, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fojdk"]
bg_color = Color(0.0862745, 0.27451, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fhtdn"]
bg_color = Color(0.0862745, 0.27451, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Gameboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Enemy" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Hand" type="HBoxContainer" parent="Enemy"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.148438
anchor_top = -0.219136
anchor_right = 0.756076
anchor_bottom = 0.151235
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Health" parent="Enemy" instance=ExtResource("6")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0659722
anchor_top = 0.228395
anchor_right = 0.239583
anchor_bottom = 0.274692
offset_top = -1.52588e-05
offset_right = 0.0
offset_bottom = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_e8sp8")
metadata/_edit_use_anchors_ = true

[node name="CardsLeft" parent="Enemy" instance=ExtResource("7")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.833333
anchor_top = 0.0864198
anchor_right = 0.920139
anchor_bottom = 0.317901
offset_right = 0.0
offset_bottom = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fu1b1")
metadata/_edit_use_anchors_ = true

[node name="CardSpace" type="Panel" parent="Enemy"]
custom_minimum_size = Vector2(846, 140)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0659722
anchor_top = 0.279321
anchor_right = 0.800347
anchor_bottom = 0.495371
theme_override_styles/panel = SubResource("StyleBoxFlat_aa5pe")
metadata/_edit_use_anchors_ = true

[node name="Spots" parent="Enemy/CardSpace" instance=ExtResource("2")]
layout_mode = 2
anchor_left = 0.00591017
anchor_top = 0.0357143
anchor_right = 0.99409
anchor_bottom = 0.964286
offset_right = 0.0
offset_bottom = 0.0
metadata/_edit_use_anchors_ = true

[node name="TurnOptions" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="WaitWhileFight" parent="TurnOptions" instance=ExtResource("8")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.828993
anchor_top = 0.422839
anchor_right = 0.915799
anchor_bottom = 0.57716
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
metadata/_edit_use_anchors_ = true

[node name="AttackOpponent" parent="TurnOptions" instance=ExtResource("9")]
visible = false
light_mask = 141
layout_mode = 1
anchors_preset = -1
anchor_left = 0.828993
anchor_top = 0.422839
anchor_right = 0.915799
anchor_bottom = 0.57716
offset_right = 0.0
offset_bottom = 0.0
mouse_default_cursor_shape = 2
metadata/_edit_use_anchors_ = true

[node name="BlockOpponent" parent="TurnOptions" instance=ExtResource("7_luclj")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.828993
anchor_top = 0.422839
anchor_right = 0.915799
anchor_bottom = 0.57716
offset_right = 0.0
offset_bottom = 0.0
mouse_default_cursor_shape = 2
metadata/_edit_use_anchors_ = true

[node name="Player" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CardSpace" type="Panel" parent="Player"]
custom_minimum_size = Vector2(846, 140)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0659723
anchor_top = 0.504629
anchor_right = 0.800347
anchor_bottom = 0.720679
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_c82is")
metadata/_edit_use_anchors_ = true

[node name="Spots" parent="Player/CardSpace" instance=ExtResource("2")]
layout_mode = 0
anchor_left = 0.00591017
anchor_top = 0.0357143
anchor_right = 0.99409
anchor_bottom = 0.964286
offset_right = 0.0
offset_bottom = 0.0
metadata/_edit_use_anchors_ = true

[node name="Health" parent="Player" instance=ExtResource("6")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0651042
anchor_top = 0.726852
anchor_right = 0.238715
anchor_bottom = 0.773148
offset_right = 0.0
offset_bottom = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fojdk")
metadata/_edit_use_anchors_ = true

[node name="Hand" type="HBoxContainer" parent="Player"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.148438
anchor_top = 0.811728
anchor_right = 0.756076
anchor_bottom = 1.1821
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CardsLeft" parent="Player" instance=ExtResource("7")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.833333
anchor_top = 0.691358
anchor_right = 0.920139
anchor_bottom = 0.92284
offset_right = 0.0
offset_bottom = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fhtdn")
metadata/_edit_use_anchors_ = true

[node name="ShowSurrender" type="Button" parent="."]
z_index = 4
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 97.0
offset_bottom = 40.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("10_ao1xb")
text = "Surrender"

[node name="CardInfo" type="Panel" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -176.0
offset_bottom = 176.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Face" type="TextureRect" parent="CardInfo"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -92.5
offset_top = 7.0
offset_right = 93.5
offset_bottom = 152.0
grow_horizontal = 2
texture = ExtResource("9_ycway")
expand_mode = 3
stretch_mode = 5

[node name="Desc" type="RichTextLabel" parent="CardInfo"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.5
offset_top = -190.0
offset_right = 90.5
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
text = "Select Card to show more infos"

[node name="Toggle" type="Button" parent="CardInfo"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -46.0
offset_right = 22.0
offset_bottom = 46.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.862745, 0.862745, 0, 1)
theme_override_colors/font_focus_color = Color(0.862745, 0.862745, 0, 1)
theme_override_font_sizes/font_size = 24
text = ">"

[node name="PlayerWins" parent="." instance=ExtResource("9_aphqi")]
visible = false
top_level = true
z_index = 3
custom_minimum_size = Vector2(0, 0)
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayerLooses" parent="." instance=ExtResource("8_vb3l3")]
visible = false
top_level = true
z_index = 3
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
anchors_preset = 0
mouse_filter = 0

[node name="surrenderOverlay" type="Panel" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="surrender" type="Button" parent="surrenderOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 6.0
offset_right = 81.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("10_ao1xb")
text = "yes"

[node name="cancel" type="Button" parent="surrenderOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = 6.0
offset_right = -20.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("10_ao1xb")
text = "no"

[node name="surrenderText" type="Label" parent="surrenderOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.5
offset_top = -30.0
offset_right = 123.5
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
text = "Do you really wanna surrender?"

[connection signal="gui_input" from="TurnOptions/AttackOpponent" to="." method="_on_AttackOpponent_gui_input"]
[connection signal="gui_input" from="TurnOptions/BlockOpponent" to="." method="_on_BlockOpponent_gui_input"]
[connection signal="gui_input" from="Player/CardSpace" to="." method="_on_CardSpace_gui_input"]
[connection signal="pressed" from="ShowSurrender" to="." method="_on_show_surrender_pressed"]
[connection signal="pressed" from="CardInfo/Toggle" to="." method="_on_cardInfo_toggle"]
[connection signal="pressed" from="surrenderOverlay/surrender" to="." method="_on_surrender"]
[connection signal="pressed" from="surrenderOverlay/cancel" to="." method="_on_cancel_pressed"]
